--- a/ModernCPP/ModernCPP.vcxproj
+++ b/ModernCPP/ModernCPP.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="ModernCPP.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CRTP.H" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
